Update Trinity Capital website with Try for Free section, pilot rebrand, and improved value proposition

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <ul>
               <li><a href="#hero" class="active">Home</a></li>
               <li><a href="#about">About</a></li>
+              <li><a href="#try-free">Try for Free</a></li>
               <li><a href="#colleges">For Colleges</a></li>
               <li><a href="#team">Team</a></li>
               <li><a href="#contact">Contact</a></li>
@@ -108,7 +109,7 @@
               data-aos="zoom-out"
             >
               <h1>Welcome to <span>Trinity Capital</span></h1>
-              <p>Empowering students with essential financial literacy skills through realistic banking simulation</p>
+              <p>Give your students hands-on experience managing real-world finances through our comprehensive banking simulation and interactive lessons</p>
               <div class="d-flex">
                 <a href="#about" class="btn-get-started">Get Started</a>
                 <a
@@ -221,19 +222,19 @@
               data-aos-delay="200"
             >
               <div class="about-content ps-0 ps-lg-3">
-                <h3>Learn. Practice. Master Financial Skills.</h3>
+                <h3>Build Real-World Financial Skills</h3>
                 <p class="fst-italic">
-                  Trinity Capital provides schools with a comprehensive financial literacy education platform. Designed specifically for classroom use, our banking simulation gives students hands-on experience with real-world financial concepts in a safe, controlled environment where mistakes become valuable learning opportunities.
+                  Trinity Capital combines realistic banking simulation with interactive lessons to give students hands-on experience managing money, understanding transactions, and making smart financial decisions. Teachers get powerful tools to track progress, assign lessons, and monitor class and individual student financial health.
                 </p>
                 <ul>
                   <li>
                     <i class="bi bi-diagram-3"></i>
                     <div>
                       <h4>
-                        Addressing the financial literacy gap in education
+                        Two Complete Platforms for Full Learning
                       </h4>
                       <p>
-                        Trinity Capital bridges the gap between theoretical financial concepts and practical application, giving students the confidence to make informed financial decisions
+                        The Student App provides a realistic banking interface with simulated accounts, transactions, bills management, and interactive lessons. The Teacher Dashboard lets educators create lessons, assign units, monitor student health metrics, track progress, and communicate with parents—all in one place.
                       </p>
                     </div>
                   </li>
@@ -241,16 +242,16 @@
                     <i class="bi bi-fullscreen-exit"></i>
                     <div>
                       <h4>
-                       Experiential learning that builds lasting knowledge
+                       Comprehensive Financial Education
                       </h4>
                       <p>
-                        Students learn by doing through our realistic banking simulation. This hands-on approach creates deeper understanding and retention compared to traditional textbook-based financial education methods.
+                        Beyond basic banking simulation, Trinity Capital includes income and spending analysis, detailed transaction categorization, bills and paychecks management, money transfers between accounts, peer-to-peer payments, and lesson-based learning conditions that require students to use the app to progress through units.
                       </p>
                     </div>
                   </li>
                 </ul>
                 <p>
-                  Trinity Capital is the comprehensive solution schools need to prepare students for financial success, combining educational rigor with engaging, practical experience.
+                  Trinity Capital is the comprehensive solution schools need to prepare students for financial success. With realistic banking simulation, detailed financial health dashboards, and powerful teacher management tools, Trinity Capital transforms financial literacy from abstract concepts into actionable skills students actually use.
                 </p>
               </div>
             </div>
@@ -452,23 +453,23 @@
         <div class="container">
           <!-- Main Pricing Cards -->
           <div class="row gy-4 justify-content-center mb-5">
-            <!-- Free Trial Card -->
+            <!-- Free Pilot Card -->
             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="pricing-item" style="border: 3px solid #17a2b8; background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);">
-                <h3>Free Trial</h3>
+                <h3>Free Pilot</h3>
                 <h4><sup>$</sup>0<span> / 30 days</span></h4>
                 <ul>
                   <li><i class="bi bi-check text-success"></i> Unlimited students</li>
                   <li><i class="bi bi-check text-success"></i> Unlimited teachers</li>
                   <li><i class="bi bi-check text-success"></i> Full feature access</li>
-                  <li><i class="bi bi-check text-success"></i> 30-day trial period</li>
+                  <li><i class="bi bi-check text-success"></i> 30-day pilot period</li>
                   <li><i class="bi bi-check text-success"></i> No credit card required</li>
                 </ul>
                 <button 
                   type="button" 
                   class="btn btn-info w-100 mt-3"
                   id="free-trial-button">
-                  <i class="bi bi-rocket"></i> Start Free Trial
+                  <i class="bi bi-rocket"></i> Start Free Pilot
                 </button>
               </div>
             </div>
@@ -561,7 +562,7 @@
             <div class="col-lg-8 text-center">
               <div class="alert alert-info">
                 <h5><i class="bi bi-lightbulb"></i> Not sure which option is right for you?</h5>
-                <p class="mb-2">Start with our <strong>free 30-day trial</strong> to explore all features, then choose the plan that fits your school's needs.</p>
+                <p class="mb-2">Start with our <strong>free 30-day pilot</strong> to explore all features, then choose the plan that fits your school's needs.</p>
                 <small class="text-muted">All plans include the same core features - only pricing and support levels differ.</small>
               </div>
             </div>
@@ -929,6 +930,96 @@
       </section>
       <!-- /Community College Pricing Section -->
 
+      <!-- Try For Free Section -->
+      <section id="try-free" class="pricing section" style="background: linear-gradient(135deg, rgba(23,162,184,0.1) 0%, rgba(19,132,150,0.1) 100%);">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <h2>Try for Free</h2>
+          <p>
+            <span>Explore Trinity Capital</span>
+            <span class="description-title">Test Drive Both Platforms</span>
+          </p>
+        </div>
+        <!-- End Section Title -->
+
+        <div class="container">
+          <div class="row gy-4 justify-content-center">
+            <!-- Student App -->
+            <div class="col-xl-5 col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <div class="pricing-item" style="border: 2px solid #007bff; height: 100%;">
+                <h3><i class="bi bi-mortarboard text-primary"></i> Student App</h3>
+                <p class="text-muted mb-3">Experience the banking simulation as a student</p>
+                <div class="mb-4 p-3" style="background: #f8f9fa; border-radius: 8px;">
+                  <p class="mb-2"><strong>Demo Credentials:</strong></p>
+                  <div class="mb-2">
+                    <p class="mb-1"><small class="text-muted">User:</small></p>
+                    <p class="font-monospace" style="background: white; padding: 8px; border-radius: 4px; border-left: 3px solid #007bff;"><code>Sample Student</code></p>
+                  </div>
+                  <div>
+                    <p class="mb-1"><small class="text-muted">PIN:</small></p>
+                    <p class="font-monospace" style="background: white; padding: 8px; border-radius: 4px; border-left: 3px solid #007bff;"><code>1234</code></p>
+                  </div>
+                </div>
+                <ul class="mb-4">
+                  <li><i class="bi bi-check text-success"></i> Realistic banking interface</li>
+                  <li><i class="bi bi-check text-success"></i> Simulated accounts with real account numbers</li>
+                  <li><i class="bi bi-check text-success"></i> Transaction history with detailed info</li>
+                  <li><i class="bi bi-check text-success"></i> Bills and payments management</li>
+                  <li><i class="bi bi-check text-success"></i> Income and spending analysis</li>
+                  <li><i class="bi bi-check text-success"></i> Interactive lessons and banking tools</li>
+                  <li><i class="bi bi-check text-success"></i> Transfers and messaging</li>
+                </ul>
+                <a href="https://trinity-capital.net" target="_blank" class="btn btn-primary w-100">
+                  <i class="bi bi-box-arrow-up-right"></i> Open Student App
+                </a>
+              </div>
+            </div>
+
+            <!-- Teacher Dashboard -->
+            <div class="col-xl-5 col-lg-6" data-aos="fade-up" data-aos-delay="200">
+              <div class="pricing-item" style="border: 2px solid #28a745; height: 100%;">
+                <h3><i class="bi bi-easel text-success"></i> Teacher Dashboard</h3>
+                <p class="text-muted mb-3">Manage classes and monitor student progress</p>
+                <div class="mb-4 p-3" style="background: #f8f9fa; border-radius: 8px;">
+                  <p class="mb-2"><strong>Demo Credentials:</strong></p>
+                  <div class="mb-2">
+                    <p class="mb-1"><small class="text-muted">User:</small></p>
+                    <p class="font-monospace" style="background: white; padding: 8px; border-radius: 4px; border-left: 3px solid #28a745;"><code>STeach01</code></p>
+                  </div>
+                  <div>
+                    <p class="mb-1"><small class="text-muted">PIN:</small></p>
+                    <p class="font-monospace" style="background: white; padding: 8px; border-radius: 4px; border-left: 3px solid #28a745;"><code>0000</code></p>
+                  </div>
+                </div>
+                <ul class="mb-4">
+                  <li><i class="bi bi-check text-success"></i> Student dashboard with progress cards</li>
+                  <li><i class="bi bi-check text-success"></i> Class health monitoring and analytics</li>
+                  <li><i class="bi bi-check text-success"></i> Individual student health assessments</li>
+                  <li><i class="bi bi-check text-success"></i> Lesson creation and assignment tools</li>
+                  <li><i class="bi bi-check text-success"></i> Student registration and management</li>
+                  <li><i class="bi bi-check text-success"></i> Parent and staff email system</li>
+                  <li><i class="bi bi-check text-success"></i> Class messaging and reporting</li>
+                </ul>
+                <a href="https://teacher-dashboard.trinity-capital.net" target="_blank" class="btn btn-success w-100">
+                  <i class="bi bi-box-arrow-up-right"></i> Open Teacher Dashboard
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Additional Info -->
+          <div class="row justify-content-center mt-4">
+            <div class="col-lg-10">
+              <div class="alert alert-info text-center" style="border-left: 4px solid #17a2b8;">
+                <h5><i class="bi bi-info-circle"></i> Explore at Your Own Pace</h5>
+                <p class="mb-0">Our demo environments allow you to fully explore Trinity Capital's features and see how students and teachers interact with the platform. No sign-up or credit card required—just click the links above to get started immediately.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /Try For Free Section -->
+
       <!-- Faq Section -->
       <section id="faq" class="faq section light-background">
         <!-- Section Title -->
@@ -1270,7 +1361,7 @@
 
   <dialog id="free-trial-dialog">
     <div class="dialog-header">
-      <h2>🎉 Start Your Free Trial</h2>
+      <h2>🎉 Start Your Free Pilot</h2>
       <button id="close-trial-dialog-btn" class="close-btn" aria-label="Close">&times;</button>
     </div>
     <div class="dialog-body">
@@ -1279,7 +1370,7 @@
         <p style="margin: 5px 0 0 0; color: white; opacity: 0.9;">No credit card required</p>
       </div>
       
-      <form id="free-trial-form">
+      <form id="free-pilot-form">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
